--- a/index.html
+++ b/index.html
@@ -28,18 +28,6 @@
 
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="js/countries.js"></script>
-
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-941940-28']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
 </head>
 <body>
 
@@ -67,7 +55,7 @@
                 "MSXML2.XmlHttp.4.0",
                 "MSXML2.XmlHttp.3.0",
                 "MSXML2.XmlHttp.2.0",
-                "Microsoft.XmlHttp"]
+                "Microsoft.XmlHttp"];
 
             for(var i = 0, len = versions.length; i < len; i++) {
                 try {
@@ -75,7 +63,7 @@
                     break;
                 }
                 catch(e){}
-            } // end for
+            }
         }
 
         xhr.onreadystatechange = ensureReadiness;
